Moves several database related classes from wres.io.data to to wres.io.database.
Refs #59791